# football-delay-watching

./: .env.example  .firebaserc  .gitignore  .venv  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  comment_body.txt  config.py  debug_output.txt  extract_images.py  extract_text.py  extraction_output.json  firebase.json  football-delay-watching.code-workspace  get_lineup.py  implementation_plan.md  issue_130.txt  issue_93.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  task.md  temp_reference_report.html  verify_photo_fix.py  walkthrough.md
.claude/: settings.json
config/: channels.py
data/: player_33.csv  player_47.csv  player_50.csv  player_52.csv  player_529.csv  player_541.csv  player_instagram_33.csv  player_instagram_39.csv  player_instagram_40.csv  player_instagram_42.csv  player_instagram_47.csv  player_instagram_49.csv  player_instagram_50.csv  player_instagram_66.csv
docs/: api_endpoints.md  api_quota.md  cache_design.md  deploy_design.md  functional_requirements.md  implementation_plan_refactoring.md  non_functional_requirements.md  requirement.md  setup_guide.md  structure.md  system_design.md  task.md  task_refactoring.md  user_utilities.md  walkthrough_refactoring.md  youtube_requirement.md
fixtures/: matches.json
guide_for_AGI/: raw_acquisition_llm_instructions.md  reviewer.md
healthcheck/: check_football_api.py  check_gcs_cache.py  check_gemini.py  check_gmail.py  check_google_search.py  check_youtube.py  check_youtube_queries.py
mock_data/: facts.json  llm.json  match.json  news.json  youtube.json
(+1806 files in other folders)
