[project]
name = "football-delay-watching"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "public",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (フォーマッターに任せる)
    "E701",  # multiple statements on one line (colon)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src", "config", "settings"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
